fix: remove scrollbar

--- a/components/button/button.css
+++ b/components/button/button.css
@@ -1,4 +1,4 @@
-
+@import url("/index.css");
 @import url("/pages/docs.css");
 
 
@@ -131,6 +131,7 @@
 }
 
 .my-float {
-    margin-top: 10px;
+    margin-top: 3px;
+    margin-left: -9px;
 }
 
